package com.ebank.entity;

public enum AccountStatus {
    OPEN,
    BLOCKED,
    CLOSED
}
