package com.ebank.entity;

public enum Role {
    CLIENT,
    AGENT_GUICHET
}
