package com.ebank.entity;

public enum TransactionType {
    DEBIT,
    CREDIT
}
